<resources>
    <string name="app_name">Image Search App</string>
    <string name="user_name">user name</string>
    <string name="retry">Retry</string>
    <string name="error_loading_please_retry">error loading please retry</string>
    <string name="no_result_found">No result found</string>
    <string name="image_the_user_searched_for">image the user searched for</string>
    <string name="user_icon">user icon</string>
</resources>