<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_24"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_view_user_name"
        android:contentDescription="@string/user_icon"
        />

    <TextView
        android:id="@+id/text_view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textColor="#FF000000"
        android:text="@string/user_name"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/image_icon"
        app:layout_constraintLeft_toRightOf="@+id/image_icon"
        app:layout_constraintBottom_toBottomOf="@+id/image_icon"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/image_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image_the_user_searched_for"
        />

</androidx.constraintlayout.widget.ConstraintLayout>